refactor: JWT 필터 리팩터링 #46