@@ -5,8 +5,9 @@ import lombok.RequiredArgsConstructor;
 import org.lucky0111.pettalk.handler.OAuth2LoginFailureHandler;
 import org.lucky0111.pettalk.handler.OAuth2LoginSuccessHandler;
 import org.lucky0111.pettalk.service.auth.CustomOAuth2UserService;
+import org.lucky0111.pettalk.service.auth.TokenService;
 import org.lucky0111.pettalk.util.auth.JWTFilter;
-import org.lucky0111.pettalk.util.auth.JWTUtil;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -19,6 +20,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -27,7 +29,10 @@ public class SecurityConfig {
     private final CustomOAuth2UserService customOAuth2UserService;
     private final OAuth2LoginSuccessHandler oAuth2LoginSuccessHandler;
     private final OAuth2LoginFailureHandler oAuth2LoginFailureHandler;
-    private final JWTUtil jwtUtil;
+    private final TokenService tokenService;
+
+    @Value("${DEV_SERVER_URL}")
+    String devServerUrl;
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
@@ -37,7 +42,7 @@ public class SecurityConfig {
                 .csrf(AbstractHttpConfigurer::disable)
                 .formLogin(AbstractHttpConfigurer::disable)
                 .httpBasic(AbstractHttpConfigurer::disable)
-                .addFilterBefore(new JWTFilter(jwtUtil), UsernamePasswordAuthenticationFilter.class)
+                .addFilterBefore(new JWTFilter(tokenService), UsernamePasswordAuthenticationFilter.class)
                 .oauth2Login((oauth2) -> oauth2
                         .userInfoEndpoint((userInfoEndpointConfig) -> userInfoEndpointConfig
                                 .userService(customOAuth2UserService))
@@ -49,7 +54,7 @@ public class SecurityConfig {
                 .authorizeHttpRequests((auth) -> auth
                         .requestMatchers("/swagger-ui/**", "/v3/api-docs/**", "/api/v1/auth/register",
                                 "/api/v1/auth/check-nickname", "/api/v1/auth/refresh", "/").permitAll()
-                        .requestMatchers("/api/v1/auth/**").authenticated()
+//                        .requestMatchers("/api/v1/auth/**").authenticated()
                         .anyRequest().permitAll())
 
                 //세션 설정 : STATELESS
@@ -64,7 +69,7 @@ public class SecurityConfig {
         return request -> {
             CorsConfiguration configuration = new CorsConfiguration();
 
-            configuration.setAllowedOrigins(Collections.singletonList("*"));
+            configuration.setAllowedOrigins(List.of("http://localhost:3000/", devServerUrl));
             configuration.setAllowedMethods(Collections.singletonList("*"));
             configuration.setAllowedHeaders(Collections.singletonList("*"));
             configuration.setAllowCredentials(true);
